Criação dos DAO e conexão com o banco. #6

--- a/TOPI/nbproject/project.properties
+++ b/TOPI/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/TOPI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.hsqldb.jar=/home/darlan/Documentos/Faculdade/5\u00aa Fase/T\u00f3picos Especiais I/JDBC/Exercicio/Topicos1-jdbc-exercicio-agenda/lib/hsqldb.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.hsqldb.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
